# post-install-linux

./: .gitignore  LICENSE.txt  PKGBUILD  README.md  ajuda.txt  estrutura.txt  log.txt  m.sh  main.py  main.sh  postinstall.py  pyproject.toml  test.py
data/: arch.json  common.json  data.json  debian.json  fedora.json
data/configs/: aliases.txt  bt.txt  code.txt  shortcuts.txt
data/json/: arch.json  common.json  debian.json  fedora.json
scripts/: configs.sh  install_packages.sh  list_packages.py  theme.sh  utils.sh
src/: configs.sh  install_packages.sh  theme.sh  utils.sh
src/backend/: install_packages.sh  theme.sh
src/configs/: env.py
src/gui/: main_window.py
src/post_install_linux/: env.py
src/post_install_linux/backend/: controller.py  env.py  setups.py  theme.py
src/post_install_linux/backend/controller/: controller.py
src/post_install_linux/backend/services/: install_packages.py  setups.py  theme.py
src/post_install_linux/backend/utils/: system.py  theme.py  utils.py
src/post_install_linux/frontend/: main.py
src/post_install_linux/frontend/controller/: controller.py
src/scripts/: install_packages.py  install_packages.sh  theme.py  theme.sh  utils.py  utils.sh
src/utils/: list_packages.py  setup.py  system.py  utils.py
tests/: pyproject.toml
tests/data/json/: common.json
tests/src/post_install_linux/: env.py
tests/src/post_install_linux/backend/: controller.py  install_packages.py
tests/src/post_install_linux/backend/utils/: setups.py
tests/src/post_install_linux/frontend/: main.py
(+1 files in other folders)
